--- a/src/app/components/add/add.component.html
+++ b/src/app/components/add/add.component.html
@@ -1,1 +1,13 @@
-<p>add works!</p>
+<form>
+  <div class = "form-group">
+    <label for="name">Imię:</label>
+    <input type="text" class="form-control" id="name"  placeholder="Imię">
+  </div>
+
+  <div class = "form-group">
+    <label for="surname">Nazwisko:</label>
+    <input type="text" class="form-control" id="surname"  placeholder="Nazwisko">
+  </div>
+
+  <button type="submit" class="btn btn-primary" id="button" (click)="addEmployee()" >Dodaj</button>
+</form>
