--- a/src/app/components/get/get.component.html
+++ b/src/app/components/get/get.component.html
@@ -1,1 +1,16 @@
-<p>get works!</p>
+<table class="table table-dark">
+  <thead>
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Imię</th>
+    <th scope="col">Nazwisko</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let item of items$">
+  <app-get-item [id] = "item.id" [name] = "item.name" [surname] = "item.surname"></app-get-item>
+  </tr>
+</tbody>
+</table>
+
+
