--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,19 @@
-<nav>
-  <ul class = "nav">
+<body>
+
+<div class="page">
+<nav class="menu">
+  <ul class="menu__list">
     <li class = "nav-item">
-      <a class="nav-link active" [routerLink]="['']">Home</a>
+      <a class="nav-link active menu__group menu__link" [routerLink]="['']">Home</a>
     </li>
     <li class = "nav-item">
-      <a class="nav-link active" [routerLink]="['/add']">Add</a>
+      <a class="nav-link active menu__group menu__link" [routerLink]="['/add']">Add</a>
     </li>
     <li class = "nav-item">
-      <a class="nav-link active" [routerLink]="['/get']">Get</a>
+      <a class="nav-link active menu__group menu__link" [routerLink]="['/get']">Get</a>
     </li>
   </ul>
 </nav>
+</div>
 
+</body>
