--- a/src/app/components/get/get.component.html
+++ b/src/app/components/get/get.component.html
@@ -1,16 +1,23 @@
+<body>
+<br><br>
+
+<div id = "form">
 <table class="table table-dark">
   <thead>
   <tr>
-    <th scope="col">#</th>
-    <th scope="col">Imię</th>
-    <th scope="col">Nazwisko</th>
+    <th >#</th>
+    <th >Imię</th>
+    <th >Nazwisko</th>
   </tr>
   </thead>
-  <tbody>
-  <tr *ngFor="let item of items$">
+
+  <tr scope="col" *ngFor="let item of items$" >
   <app-get-item [id] = "item.id" [name] = "item.name" [surname] = "item.surname"></app-get-item>
   </tr>
-</tbody>
-</table>
 
+</table>
+</div>>
+
+
+</body>
 
