--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,22 @@
 <body>
+
+<br><br><br><br><br><br>
+
+
+<div id = "form">
+  Aplikacja losująca użytkowników dyżurujących w danym dniu
+  (Panel dodawania nowej osoby dyżurującej, Strona losowania -
+  konfiguracja: od jakiej daty ustalamy dyżury, konfiguracja na które
+  dni tygodnia dyżury są wymagane + przycisk losowania i możliwość pobrania
+  Excela z wylosowanymi dyżurami, powiadomienie email po wylosowaniu dyżurów o
+  dyżurze w danym dniu wraz z dodawaniem wydarzenia do kalendarza Google)
+  <br><br>
+  <h3>Wykonawcy</h3>
+  <h5>Patryk Zych <br>Arkadiusz Kopacz <br>Tomasz Grzesik</h5>
+
+
+</div>
+
+
 </body>
 
