--- a/src/app/components/get-item/get-item.component.html
+++ b/src/app/components/get-item/get-item.component.html
@@ -1,5 +1,5 @@
-<tr>
-  <td><app-get-item-id [id] = "id"></app-get-item-id></td>
-  <td><app-get-item-name [name] = "name"></app-get-item-name></td>
-  <td><app-get-item-surname [surname]="surname"></app-get-item-surname></td>
-</tr>
+
+  <app-get-item-id [id] = "id"></app-get-item-id>
+  <app-get-item-name [name] = "name"></app-get-item-name>
+  <app-get-item-surname [surname]="surname"></app-get-item-surname>
+
