--- a/src/app/components/get/get.component.html
+++ b/src/app/components/get/get.component.html
@@ -5,18 +5,47 @@
 <table class="table table-dark">
   <thead>
   <tr>
-    <th >#</th>
-    <th >Imię</th>
-    <th >Nazwisko</th>
+    <th scope="col">#</th>
+    <th scope="col">Imię</th>
+    <th scope="col">Nazwisko</th>
   </tr>
   </thead>
 
-  <tr scope="col" *ngFor="let item of items$" >
-  <app-get-item [id] = "item.id" [name] = "item.name" [surname] = "item.surname"></app-get-item>
+  <tbody *ngFor="let item of items$">
+  <tr >
+    <td><app-get-item [id] = "item.id" ></app-get-item></td>
+    <td><app-get-item [name] = "item.name" ></app-get-item></td>
+    <td><app-get-item [surname] = "item.surname"></app-get-item></td>
   </tr>
+  </tbody>
 
 </table>
 </div>>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
