--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
     <li class = "nav-item">
       <a class="nav-link active menu__group menu__link" [routerLink]="['/get']">Get</a>
     </li>
+    <li class = "nav-item">
+      <a class="nav-link active menu__group menu__link" [routerLink]="['/random']">Losowanie</a>
+    </li>
   </ul>
 </nav>
 </div>
