--- a/src/app/components/add/add.component.html
+++ b/src/app/components/add/add.component.html
@@ -3,7 +3,9 @@
 <br><br>
 <div id = "form">
   <h1>Wprowadź dane</h1>
+
   <form class ="user-data">
+
     <br><br><br>
     <div class = "form-group">
     <div class="input-container">
@@ -25,3 +27,9 @@
 </div>
 
 </body>
+<footer class="page-footer font-small blue foot">
+
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: Wykonawcy Patryk Zych | Arkadiusz Kopacz | Tomasz Grzesik
+  </div>
+
+</footer>
