--- a/src/app/components/get/get.component.html
+++ b/src/app/components/get/get.component.html
@@ -3,6 +3,7 @@
 
 <div id = "form">
   <h2>Lista pracowników:</h2>
+  <br>
 <table class="table table-dark">
   <thead>
   <tr>
@@ -21,7 +22,13 @@
   </tbody>
 
 </table>
-</div>>
+</div>
 
 </body>
 
+<footer class="page-footer font-small blue foot">
+
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: Wykonawcy Patryk Zych | Arkadiusz Kopacz | Tomasz Grzesik
+  </div>
+
+</footer>
