--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,15 +4,13 @@
 
 
 <div id = "form">
-  Aplikacja losująca użytkowników dyżurujących w danym dniu
-  (Panel dodawania nowej osoby dyżurującej, Strona losowania -
+  <h1>Aplikacja losująca dyżurujących</h1>
+  <br>
+  Aplikacja losująca użytkowników dyżurujących w danym dniu.
+  Panel dodawania nowej osoby dyżurującej, Strona losowania -
   konfiguracja: od jakiej daty ustalamy dyżury, konfiguracja na które
   dni tygodnia dyżury są wymagane + przycisk losowania i możliwość pobrania
-  Excela z wylosowanymi dyżurami, powiadomienie email po wylosowaniu dyżurów o
-  dyżurze w danym dniu wraz z dodawaniem wydarzenia do kalendarza Google)
-  <br><br>
-  <h3>Wykonawcy</h3>
-  <h5>Patryk Zych <br>Arkadiusz Kopacz <br>Tomasz Grzesik</h5>
+  Excela z wylosowanymi dyżurami
 
 
 </div>
@@ -20,3 +18,9 @@
 
 </body>
 
+<footer class="page-footer font-small blue foot">
+
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: Wykonawcy Patryk Zych | Arkadiusz Kopacz | Tomasz Grzesik
+  </div>
+
+</footer>
