--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,10 +7,10 @@
       <a class="nav-link active menu__group menu__link" [routerLink]="['']">Home</a>
     </li>
     <li class = "nav-item">
-      <a class="nav-link active menu__group menu__link" [routerLink]="['/add']">Add</a>
+      <a class="nav-link active menu__group menu__link" [routerLink]="['/add']">Dodaj</a>
     </li>
     <li class = "nav-item">
-      <a class="nav-link active menu__group menu__link" [routerLink]="['/get']">Get</a>
+      <a class="nav-link active menu__group menu__link" [routerLink]="['/get']">Tabela</a>
     </li>
     <li class = "nav-item">
       <a class="nav-link active menu__group menu__link" [routerLink]="['/random']">Losowanie</a>
@@ -18,5 +18,10 @@
   </ul>
 </nav>
 </div>
+
+
+
+
+
 
 </body>
