--- a/src/app/components/random/random.component.css
+++ b/src/app/components/random/random.component.css
@@ -8,7 +8,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  min-height:100vh;
+  min-height:120vh;
   font-family: 'Noto Sans', sans-serif;
 }
 
@@ -27,4 +27,79 @@ body{
   color: white;
 }
 
+.przycisk {
+
+
+  background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  background-color:#ffffff;
+  border-radius:6px;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  cursor:pointer;
+  color:#666666;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #ffffff;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  transition: font-size 1s,
+}
+.przycisk:hover {
+  background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+  background-color:#f6f6f6;
+
+}
+.przycisk:active {
+  position:relative;
+  top:1px;
+}
+
+.btn{
+  color:#fff;
+  background-color:#e74c3c;
+  outline: none;
+  border: 0;
+  color: #fff;
+  padding:14px 24px;
+  text-transform:uppercase;
+  margin-top:50px;
+  border-radius:2px;
+  cursor:pointer;
+  position:relative;
+  transition: 0.3s;
+}
+.btn:hover{
+  background-color:#93291E;
+
+}
+ul{
+  list-style-type: none;
+}
+
+.many{
+  margin-top:20px;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-inside: 20px;
+  border-radius:3px;
+  height: 100px;
+}
+
+.many1{
+  margin-top:20px;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-inside: 20px;
+  border-radius:3px;
+  height: 430px;
+}
+
+::placeholder {
+  color: lightgray;
+  opacity: 1; /* Firefox */
+}
+
+.foot{
+  background-color: rgba(0, 0, 0, 0.87);
+  color: white;
+}
 
