--- a/src/app/components/add/add.component.css
+++ b/src/app/components/add/add.component.css
@@ -71,8 +71,7 @@ h1 {
   top:1px;
 }
 
-
-
+/*
 .text-center{
   color:#fff;
   text-transform:uppercase;
@@ -80,6 +79,7 @@ h1 {
   text-align: center;
   font-family: Impact, Charcoal, sans-serif;
 }
+*/
 
 .input-container{
   position:relative;
@@ -139,6 +139,9 @@ ul{
   list-style-type: none;
 }
 
-
+.foot{
+  background-color: rgba(0, 0, 0, 0.87);
+  color: white;
+}
 
 
