--- a/src/app/components/get/get.component.css
+++ b/src/app/components/get/get.component.css
@@ -2,13 +2,15 @@
 
 
 body{
+
+  height: 200%;
   background-image: url("https://wallpaperaccess.com/full/1282794.jpg");
   background-position: center;
   background-origin: content-box;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  min-height:100vh;
+
   font-family: 'Noto Sans', sans-serif;
 }
 
@@ -28,3 +30,9 @@ body{
 .table{
   text-align:center;
 }
+
+.foot{
+  background-color: rgba(0, 0, 0, 0.87);
+  color: white;
+}
+
